feat: add chat filter, config files, and CI improvements
- Add blocked-words.txt with curated kid-safe word list
- Add setup_chat_filter() with ChatSentry plugin auto-download
- Add --no-chat-filter flag to skip filter setup
- Ship config templates (server.properties, bukkit/spigot/paper YAMLs)
- Add CI job to validate YAML configs and server.properties template
- Update README with new features

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>